[package]
name = "ssms_rust"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust implementations of SSM simulators"
license = "MIT"

[lib]
name = "ssms_rust"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Parallelism
rayon = "1.10"

# Random number generation - optimized for speed
rand = "0.8"
rand_xorshift = "0.3"
rand_distr = "0.4"
rand_pcg = "0.3"  # PCG64 - same as NumPy, very fast

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
